paths fixed, sources copying disabled

--- a/curriculum_vitae/sources/base.tex
+++ b/curriculum_vitae/sources/base.tex
@@ -32,34 +32,34 @@
 
 			% META IMAGE
 			\begin{center}
-				\includegraphics*[width=0.5\linewidth]{me.jpg}
+				\includegraphics*[width=0.5\linewidth]{../me.jpg}
 			\end{center}
 			\vfill\null
 
 			% CONTACT DETAILS
-			\include{contact}
+			\include{../build/contact}
 			\vfill\null
 
 			% SKILLS
-			\include{skills}
+			\include{../build/skills}
 			\vfill\null
 
 			% ACHIEVEMENTS
-			\include{achievements}
+			\include{../build/achievements}
 
 		\end{leftcolumn}
 		\begin{rightcolumn}
 
-			\include{header}
+			\include{../build/header}
 			\vspace{-12pt}
 
-			\include{education}
+			\include{../build/education}
 			\vfill\null
 
-			\include{work}
+			\include{../build/work}
 			\vfill\null
 
-			\include{work}
+			\include{../build/projects}
 			% hotfixes to create fake-space to ensure the whole height is used
 			\vfill
 			\vfill
