--- a/curriculum_vitae/templates/education.tex
+++ b/curriculum_vitae/templates/education.tex
@@ -1,15 +1,14 @@
 \cvsection{EDUCATION}
 
 %{# items }%
-    \cvevent
-	    {\textbf{
-            %{ start }% - %{ end }%
-        }}{
+    \cvevent{
+            \textbf{
+                %{ start }% - %{ end }%
+            }
+        }{
             %{ title }%
         }{
             %{ place }%
-        }{
-            %{ result }%
-        }
+        }{ %{ result }% }
     \vfill\null
 %{/ items }%
