--- a/curriculum_vitae/templates/projects.tex
+++ b/curriculum_vitae/templates/projects.tex
@@ -1,14 +1,17 @@
 \cvsection{PROJECTS}
 
 %{# items }%
-    \cvevent
-        {\textbf{
-            %{ start }% - %{ end }%
-        }}{\href{
-            %{ link }%
+    \cvevent{
+            \textbf{
+                %{ start }% - %{ end }%
+            }
         }{
-            %{ name }%
-        }}{
+            \href{
+                %{ link }%
+            }{
+                %{ name }%
+            }
+        }{
             Tools: %{ tools }%
         }{
             %{ desc }%
