--- a/curriculum_vitae/templates/work.tex
+++ b/curriculum_vitae/templates/work.tex
@@ -1,10 +1,11 @@
 \cvsection{WORK EXPERIENCE}
 
 %{# items }%
-    \cvevent
-        {\textbf{
-            %{ start }% - %{ end }%
-        }}{
+    \cvevent{
+            \textbf{
+                %{ start }% - %{ end }%
+            }
+        }{
             %{ job }%
         }{
             %{ place }%
