contact nl removed - test

--- a/curriculum_vitae/templates/contact.tex
+++ b/curriculum_vitae/templates/contact.tex
@@ -4,13 +4,13 @@
     %{ email }%
 }{
     %{ email }%
-}{black} \\ [6pt]
+}{black}
 
 \icontext{Github}{14}{\href{
     %{ github }%
 }{
     %{ nick }%
-}}{black} \\ [6pt]
+}}{black}
 
 \icontext{Linkedin}{14}{\href{
     %{ linkedin }%
