rest of new lines removed

--- a/curriculum_vitae/templates/contact.tex
+++ b/curriculum_vitae/templates/contact.tex
@@ -16,14 +16,14 @@
     %{ linkedin }%
 }{
     %{ nick }%
-}}{black} \\ [6pt]
+}}{black}
 
 \icontext{Telegram}{14}{\href{
     %{ telegram }%
 }{
     %{ nick }%
-}}{black} \\ [6pt]
+}}{black}
 
 \icontext{Phone}{14}{
     %{ phone }%
-}{black} \\ [6pt]
+}{black}
