telegram icon fixed + all behavior fixed

--- a/curriculum_vitae/templates/contact.tex
+++ b/curriculum_vitae/templates/contact.tex
@@ -18,7 +18,7 @@
     %{ nick }%
 }}{black}
 
-\icontext{Telegram}{14}{\href{
+\icontext{PaperPlane}{14}{\href{
     %{ telegram }%
 }{
     %{ nick }%
