--- a/curriculum_vitae/templates/education.tex
+++ b/curriculum_vitae/templates/education.tex
@@ -9,6 +9,8 @@
             %{ title }%
         }{
             %{ place }%
-        }{ %{ result }% }
+        }{
+            %{ result }%
+        }
     \vfill\null
 %{/ items }%
