--- a/curriculum_vitae/sources/base.tex
+++ b/curriculum_vitae/sources/base.tex
@@ -65,6 +65,9 @@
 			% PROJECTS
 			\input{../build/projects}
 
+			% EVENTS
+			\input{../build/events}
+
 			% hotfixes to create fake-space to ensure the whole height is used
 			\vfill
 			\vfill
