--- a/curriculum_vitae/sources/base.tex
+++ b/curriculum_vitae/sources/base.tex
@@ -68,6 +68,9 @@
 			% EVENTS
 			\input{../build/events}
 
+			% EXTRACURRICULAR
+			\input{../build/extracurricular}
+
 			% hotfixes to create fake-space to ensure the whole height is used
 			\vfill
 			\vfill
