--- a/curriculum_vitae/templates/events.tex
+++ b/curriculum_vitae/templates/events.tex
@@ -1,4 +1,4 @@
-\cvsection{PROJECTS}
+\cvsection{EVENTS}
 
 %{# items }%
     \cvevent{
@@ -10,7 +10,7 @@
         }{
             \phantom
         }{
-            %{ desc }%
+            %{ description }%
         }
     \vfill\null
 %{/ items }%
