--- a/curriculum_vitae/sources/base.tex
+++ b/curriculum_vitae/sources/base.tex
@@ -43,8 +43,8 @@
 			\input{../build/skills}
 			\vfill\null
 
-			% ACHIEVEMENTS
-			\input{../build/achievements}
+			% CERTIFICATIONS
+			\input{../build/certifications}
 
 		\end{leftcolumn}
 
