--- a/curriculum_vitae/templates/extracurricular.tex
+++ b/curriculum_vitae/templates/extracurricular.tex
@@ -1,14 +1,14 @@
 \cvsection{EXTRACURRICULAR}
 
 %{# items }%
-    \cvevent{
-            \phantom
+    \cvtext{
+            \phantom{}
         }{
             %{ description }%
         }{
-            \phantom
+            \phantom{}
         }{
-            \phantom
+            \phantom{}
         }
     \vfill\null
 %{/ items }%
