--- a/curriculum_vitae/sources/support.tex
+++ b/curriculum_vitae/sources/support.tex
@@ -50,7 +50,7 @@
 % param 1: time-frame i.e. Sep 14 - Jan 15 etc.
 % param 2:   event name (job position etc.)
 % param 3: Customer, Employer, Industry
-% param 4: Short description
+% param 4: Short description (optional)
 \newcommand{\cvevent}[4] {
 	
 	% we wrap this part in a parbox, so title and description are not separated on a pagebreak
