--- a/curriculum_vitae/templates/events.tex
+++ b/curriculum_vitae/templates/events.tex
@@ -8,7 +8,7 @@
         }{
             %{ name }%
         }{
-            \phantom
+            \phantom{}
         }{
             %{ description }%
         }
