spacing reduced empty sections removed

--- a/curriculum_vitae/sources/base.tex
+++ b/curriculum_vitae/sources/base.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,a4paper]{article}	
+\documentclass[10pt, a4paper]{article}	
 
 \usepackage[utf8]{inputenc}		
 \usepackage{xstring, xifthen}
@@ -24,7 +24,7 @@
 	\columnratio{0.33}
 
 	\setlength{\columnsep}{2.2em}
-	\setlength{\columnseprule}{4pt}
+	\setlength{\columnseprule}{2mm}
 	\colseprulecolor{lightcol}
 
 	\begin{paracol}{2}
