--- a/curriculum_vitae/sources/setup.tex
+++ b/curriculum_vitae/sources/setup.tex
@@ -31,7 +31,7 @@
 }
 
 % remove all possible margins
-\geometry{top=1cm, bottom=1cm, left=1cm, right=1cm}
+\geometry{top=2mm, bottom=2mm, left=2mm, right=2mm}
 \pagestyle{empty}
 
 % indentation is zero
