--- a/curriculum_vitae/templates/extracurricular.tex
+++ b/curriculum_vitae/templates/extracurricular.tex
@@ -1,14 +1,18 @@
-\cvsection{EXTRACURRICULAR}
+%{# items.0 }%
+    \cvsection{EXTRACURRICULAR}
+%{/ items.0 }%
 
 %{# items }%
-    \cvtext{
-            \phantom{}
-        }{
-            %{ description }%
-        }{
-            \phantom{}
-        }{
-            \phantom{}
+    \cvevent{
+        \textbf{
+            %{ date }%
         }
+    }{
+        %{ name }%
+    }{
+        \phantom{}
+    }{
+        %{ description }%
+    }
     \vfill\null
 %{/ items }%
