certifications pagebreak removed

--- a/curriculum_vitae/templates/certifications.tex
+++ b/curriculum_vitae/templates/certifications.tex
@@ -1,11 +1,15 @@
-\cvsection{CERTIFICATIONS}
+\parbox{\mpwidth}{
+    %{# items.0 }%
+        \cvsection{CERTIFICATIONS}
+    %{/ items.0 }%
 
-%{# items }%
-    \cvmetaevent {
-        %{ name }%
-    }{
-        %{ result }%
-    }{}{
-        %{ desc }%
-    }
-%{/ items }%
+    %{# items }%
+        \cvmetaevent {
+            %{ name }%
+        }{
+            %{ result }%
+        }{}{
+            %{ desc }%
+        }
+    %{/ items }%
+}
