--- a/curriculum_vitae/templates/header.tex
+++ b/curriculum_vitae/templates/header.tex
@@ -1,4 +1,5 @@
 \fcolorbox{white}{darkcol}{
+	\noindent
 	\begin{minipage}[c][3.5cm][c]{0.98\mpwidth}
 		\begin{center}
 			\HUGE{ \textbf{ \textcolor{white}{ \uppercase{ 
