none profile removed

--- a/curriculum_vitae/sources/setup.tex
+++ b/curriculum_vitae/sources/setup.tex
@@ -60,3 +60,7 @@
 % to keep padding included in width calculations
 % can also be used for other boxes / environments
 \newcommand{\mpwidth}{\linewidth-\fboxsep-\fboxsep}
+
+
+% color definitions
+\definecolor{headerblue}{rgb}{0.64, 0.87, 0.93}
