--- a/curriculum_vitae/templates/skills.tex
+++ b/curriculum_vitae/templates/skills.tex
@@ -7,7 +7,7 @@
         %{ years }%+ yrs
     }{
         %{# count }%
-            %{ years }% / %{ total }%
+            %{ years }% / %{# max }% %{ items }%, years %{/ max }%
         %{/ count }%
     } \\ [-5pt]
 %{/ items }%
