font size reduced

--- a/curriculum_vitae/sources/setup.tex
+++ b/curriculum_vitae/sources/setup.tex
@@ -56,11 +56,10 @@
 % light color
 \definecolor{lightcol}{RGB}{ 245, 245, 245 }
 
+% header link color
+\definecolor{headerblue}{rgb}{0.64, 0.87, 0.93}
+
 % returns minipage width minus two times \fboxsep
 % to keep padding included in width calculations
 % can also be used for other boxes / environments
 \newcommand{\mpwidth}{\linewidth-\fboxsep-\fboxsep}
-
-
-% color definitions
-\definecolor{headerblue}{rgb}{0.64, 0.87, 0.93}
