--- a/curriculum_vitae/sources/support.tex
+++ b/curriculum_vitae/sources/support.tex
@@ -32,7 +32,7 @@
 % param 3: percent, values range from 0 to 1
 \newcommand{\cvskill}[3] {
 	\begin{tabular*}{1\mpwidth}{p{0.72\mpwidth} r}
- 		\textcolor{black}{\textbf{#1}} & \textcolor{maincol}{#2} \\
+ 		\textcolor{black}{\small \textbf{#1}} & \textcolor{maincol}{\small #2} \\
 	\end{tabular*}
 
 	\hspace{4pt}
