--- a/curriculum_vitae/sources/base.tex
+++ b/curriculum_vitae/sources/base.tex
@@ -1,6 +1,6 @@
-\documentclass[10pt, a4paper]{article}	
+\documentclass[8pt, a4paper]{extarticle}	
 
-\usepackage[utf8]{inputenc}		
+\usepackage[utf8]{inputenc}
 \usepackage{xstring, xifthen}
 \usepackage[default]{raleway}
 \usepackage[T1]{fontenc}
