--- a/curriculum_vitae/sources/base.tex
+++ b/curriculum_vitae/sources/base.tex
@@ -15,13 +15,14 @@
 \usepackage{transparent}
 \usepackage{color}
 \usepackage[colorlinks = true, urlcolor = blue]{hyperref}
+\usepackage{enumitem}
 
 \input{setup}
 \input{support}
 
 
 \begin{document}
-	\columnratio{0.33}
+	\columnratio{0.26}
 
 	\setlength{\columnsep}{2.2em}
 	\setlength{\columnseprule}{2mm}
