--- a/curriculum_vitae/templates/education.tex
+++ b/curriculum_vitae/templates/education.tex
@@ -9,8 +9,14 @@
             %{ title }%
         }{
             %{ place }%
-        }{
-            %{ result }%
         }
+        %{# result }%
+        {
+            %{ . }%
+        }
+        %{/ result }%
+        %{^ result }%
+        {}
+        %{/ result }%
     \vfill\null
 %{/ items }%
