--- a/curriculum_vitae/templates/skills.tex
+++ b/curriculum_vitae/templates/skills.tex
@@ -6,8 +6,8 @@
     }{
         %{ years }%+ yrs
     }{
-        %{# count }%
-            %{ years }% / %{# max }% %{ items }%, years %{/ max }%
-        %{/ count }%
+        %{# count() }%
+            %{ years }% / %{# max() }% %{ items }%, years %{/ max() }%
+        %{/ count() }%
     } \\ [-5pt]
 %{/ items }%
