header size reduced

--- a/curriculum_vitae/templates/header.tex
+++ b/curriculum_vitae/templates/header.tex
@@ -1,11 +1,11 @@
 \fcolorbox{white}{darkcol}{
 	\noindent
-	\begin{minipage}[c][2.5cm][c]{0.98\mpwidth}
+	\begin{minipage}[c][1.75cm][c]{0.98\mpwidth}
 		\begin{center}
-			\HUGE{ \textbf{ \textcolor{white}{ \uppercase{ 
+			\Huge{ \textbf{ \textcolor{white}{ \uppercase{ 
 				%{ contact:name }%
-			} } } } \\ [-20pt]
-			\textcolor{white}{ \rule{0.1\textwidth}{1.25pt} } \\ [4pt]
+			} } } } \\ [-15pt]
+			\textcolor{white}{ \rule{0.1\textwidth}{1.25pt} } \\ [1pt]
 			\large{ \textcolor{white} {
 				%{ contact:title }%
 			} } \\ [5pt]
@@ -19,4 +19,4 @@
 			} }
 		\end{center}
 	\end{minipage}
-} \\ [14pt]
+} \\ [12pt]
