--- a/curriculum_vitae/sources/base.tex
+++ b/curriculum_vitae/sources/base.tex
@@ -70,11 +70,8 @@
 			% EXTRACURRICULAR
 			\input{../build/extracurricular}
 
-			% hotfixes to create fake-space to ensure the whole height is used
-			\vfill
-			\vfill
-			\vfill
-
 		\end{rightcolumn}
+
+		\flushpage
 	\end{paracol}
 \end{document}
